# hs-kf-simple-demo

./: .gitignore  Dockerfile  pyproject.toml
kf_hs/: pipeline.py
kf_hs/steps/train_model/: component.yaml  train.py
kf_hs/steps/update_application/: component.yaml  update.py
kf_hs/steps/upload_model/: component.yaml  func_main.py  requirements.txt  upload.py
